--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,4 +1,59 @@
-body {
-  background-color: aquamarine;
+@bg-color: #b7d4a8;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+// 主窗口样式
+.main {
+  width: 360px;
+  height: 420px;
+  background-color: @bg-color;
+  margin: 100px auto;
+  border: 10px solid black;
+  border-radius: 20px;
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  .stage {
+    width: 304px;
+    height: 304px;
+    border: 2px solid black;
+    position: relative;
+    .snake {
+      &>.head {
+        
+      }
+      &>div {
+        width: 10px;
+        height: 10px;
+        background-color: #000;
+        border: 1px solid @bg-color;
+        position: absolute;
+      }
+    }
+    #food {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      left: 100px;
+      display: flex;
+      flex-flow:row wrap;
+      justify-content: space-between;
+      align-content: space-between;
+      &>div {
+        width: 4px;
+        height: 4px;
+        background-color: #000;
+        transform: rotate(45deg);
+      }
+    }
+  }
+  .score-panel {
+    width: 300px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
